# recipe-genie

./: README.md  error.md
backend/: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini
backend/app/: main.py
backend/app/api/: api.py  auth.py  deps.py  ingredients.py  recipes.py  users.py
backend/app/core/: config.py
backend/app/crud/: crud_ingredient.py  crud_recipe.py  crud_user.py
backend/app/models/: ingredient.py  recipe.py  user.py
backend/app/schemas/: ingredient.py  recipe.py  user.py
backend/app/services/: gemini.py
backend/tests/: conftest.py  test_main.py  utils.py
backend/tests/api/: test_ingredients_api.py  test_recipes_api.py  test_users_api.py
backend/tests/crud/: test_ingredient_crud.py  test_recipe_crud.py  test_user_crud.py
docs/: project_overview.md
docs/tasks/: backend-tasks.md  frontend-tasks.md
frontend/: .env.example  README.md  pubspec.yaml
frontend/android/app/: build.gradle.kts
frontend/ios/Runner/: Info.plist
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: main.dart
frontend/lib/core/: router.dart  theme.dart
frontend/lib/models/: recipe.dart  user.dart
frontend/lib/providers/: auth_provider.dart  recipe_provider.dart
frontend/lib/screens/: home_screen.dart  login_screen.dart  recipe_detail_screen.dart
frontend/lib/services/: auth_service.dart  recipe_service.dart
frontend/lib/widgets/: recipe_card.dart
frontend/linux/: CMakeLists.txt
frontend/test/: widget_test.dart
frontend/web/: index.html  manifest.json
frontend/windows/: CMakeLists.txt
(+12 files in other folders)
